--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -36,7 +36,7 @@
   .codes .lt_cnt .most_hotdeal{padding:10px 0;border-bottom:1px solid #ccc;}
   .codes .lt_cnt .most_hotdeal .image{float:left;width:39%;margin-right:1%;}
   .codes .lt_cnt .most_hotdeal .image img{width:100%;}
-  .codes .lt_cnt .most_hotdeal .inner{float:left;width:59%;margin-left:1%;padding:20px 7px 5px 0;}
+  .codes .lt_cnt .most_hotdeal .inner{float:left;width:59%;margin-left:1%;padding:0 7px 5px 0;}
   .codes .lt_cnt .most_hotdeal .inner p{font-size:12px;line-height:1.4;height:4.2em;overflow:hidden;display:-webkit-box;display:-ms-flexbox;display:box;vertical-align:top;text-overflow:ellipsis;word-break:break-all;-webkit-box-orient:vertical;-webkit-line-clamp:3}
   .codes .lt_cnt .most_hotdeal .inner p a{text-decoration:none;color:#000;}
   .codes .lt_cnt .most_hotdeal .inner em{font-size:20px;}
@@ -314,6 +314,7 @@
   .codes .card_wrap .card .inner>.code_high .m_tooltip_purple .m_tooltip-content{background:#b400b4;}
 
   .codes .lt_cnt .most_h_wrap .bottom_line{display:none;}
+  .codes .lt_cnt .most_hotdeal .image img{height:150px;object-fit:contain;}
   .codes .lt_cnt .most_hotdeal{float:left;width:46%;margin:1% 2%;}
 }
 
