--- a/app/views/hotdeals/index.html.erb
+++ b/app/views/hotdeals/index.html.erb
@@ -7,7 +7,7 @@
     <div class="dealpage_title"><p>The Best Bargain</p></div>
     <%= render 'hotdeals/header' %>  
     
-      <div id="hotdeals">      
+      <div class="clearfix" id="hotdeals">      
         <%= render @hotdeals %> 
       </div>
       <%= will_paginate @hotdeals %>
