--- a/app/views/promocodes/edit.html.erb
+++ b/app/views/promocodes/edit.html.erb
@@ -15,9 +15,9 @@
         <%= f.input :p_image_title, label: 'Image_Title' %>
         <%= f.input :p_hashtag, label: 'Hashtags' %>
         <div class="pricing clearfix">
-          <%= f.input :p_list_price, label: 'List Price' %>
-          <%= f.input :p_price, label: 'Current Price' %>
-          <%= f.input :p_percentage, label: 'Discount Percentage' %>
+          <%= f.input :p_spare_26, label: 'List Price' %>
+          <!-- <%= f.input :p_price, label: 'Current Price' %> -->
+          <%= f.input :p_spare_27, label: 'Discount Percentage' %>
           <%= f.input :p_promocode, label: 'Promo Code' %>
           <%= f.input :p_end_date, label: 'End Date' %>
           <%= f.input :p_coupon_deal, label: 'Coupon Deals?' %>
