--- a/app/views/promocodes/_form.html.erb
+++ b/app/views/promocodes/_form.html.erb
@@ -4,7 +4,9 @@
     <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
     <%= f.input :pimage, label: 'Choose Image' %>
-    <%= f.select :p_banner, options_for_select([["Do You Have A Banner?", ""], "YES"])%><br /><br />
+    <%= f.select :p_banner, options_for_select([["Do You Have A Banner?", ""], "YES"])%>
+    <%= f.select :p_spare_01, options_for_select([["NO PRIME", ""], "PRIME"])%>
+    <%= f.select :p_spare_02, options_for_select([["In Stock", ""], "Only in a few stock left"])%><br /><br />
     <%= f.input :p_image, label: 'Image URL' %>
     <%= f.input :p_link, label: 'Product URL' %>
     <%= f.input :p_title , label: 'Title Of Product' %>
@@ -16,6 +18,8 @@
       <%= f.input :p_spare_27, label: 'Discount Percentage' %>
       <%= f.input :p_promocode, label: 'Promo Code' %>
       <%= f.input :p_end_date, label: 'End Date' %>
+      <%= f.input :p_spare_03, label: 'Average Rate' %>
+      <%= f.input :p_spare_04, label: 'Number of Reviews' %>
       <%= f.input :p_coupon_deal, label: 'Coupon Deals?' %>
       <%= f.input :p_extra_deal, label: 'Extra Deals?' %>
     </div>
