--- a/app/views/promocodes/_promocode.html.erb
+++ b/app/views/promocodes/_promocode.html.erb
@@ -6,15 +6,17 @@
   <% else %>
     <div class="image_box"><%= link_to (image_tag promocode.pimage.url(:small), alt: promocode.p_title, title: promocode.p_image_title), promocode %></div>
   <% end %>
-  <div class="buy-now"><span><a target="_blank" href="<%= promocode.p_link %>">BUY NOW</a></span></div>
+
+  <div class="buy-now"><span><%= link_to "GET CODE", promocode %></span></div>
   <figcaption>
     <h3><%= render_with_phashtags(promocode.p_hashtag.to_s) %></h3>
     <p><%= link_to promocode.p_title, promocode %></p>
     <div class="price">
       <em>$<%= promocode.p_list_price %></em>$<%= promocode.p_price %>
     </div>
-    <div class="m_btn"><a href="<%= promocode.p_link %>">Buy Now</a></div>
+    <div class="m_btn"><%= link_to "GET CODE", promocode %></a></div>
   </figcaption>
+  
 </figure>
 
 <!-- < end >  -->
