--- a/app/views/promocodes/edit.html.erb
+++ b/app/views/promocodes/edit.html.erb
@@ -9,6 +9,8 @@
 
         <%= f.input :pimage, label: 'Choose Image' %>
         <%= f.select :p_banner, ([["Do You Have A Banner?", ""], "YES"])%><br /><br />
+        <%= f.select :p_spare_01, ([["NO PRIME", ""], "PRIME"])%>
+        <%= f.select :p_spare_02, ([["In Stock", ""], "Only in a few stock left"])%><br /><br />
         <%= f.input :p_image, label: 'Image URL' %>
         <%= f.input :p_link, label: 'Product URL' %>
         <%= f.input :p_title , label: 'Title Of Product' %>
@@ -20,6 +22,8 @@
           <%= f.input :p_spare_27, label: 'Discount Percentage' %>
           <%= f.input :p_promocode, label: 'Promo Code' %>
           <%= f.input :p_end_date, label: 'End Date' %>
+          <%= f.input :p_spare_03, label: 'Average Rate' %>
+          <%= f.input :p_spare_04, label: 'Number of Reviews' %>
           <%= f.input :p_coupon_deal, label: 'Coupon Deals?' %>
           <%= f.input :p_extra_deal, label: 'Extra Deals?' %>
         </div>
