--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -6,6 +6,7 @@
   <div class="show_wrap clearfix">
     <div class="wrap">
     <%= render 'promocodes/header' %>  
+    
       <div class="show_box clearfix">
         
         <!-- <p>Location Map</p> -->
@@ -15,9 +16,7 @@
           <% else %>
            <%= link_to (image_tag @promocode.pimage.url(:small), alt: @promocode.p_title, title: @promocode.p_image_title), @promocode %>
           <% end %>
-          <div class="mark">
-            <span>HOT</span><em>DEALS</em>
-          </div>
+          <div class="mark"><span>HOT</span><em>DEALS</em></div>
            <% if can? :update, @promocode %>
             <div class="admin">
               <%= link_to 'Back', promocodes_path %> |
@@ -27,6 +26,7 @@
             </div>
           <% end %>
         </div>
+
         <div class="show_inner">
          <div class="hotdeal_inner">
            <h2><%= @promocode.p_title %></h2>
@@ -35,21 +35,42 @@
            <% running_total =  @promocode.p_spare_26 - (@promocode.p_spare_27 / 100) * @promocode.p_spare_26 %>
            <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01"><%= number_to_currency(@promocode.p_spare_26) %></span><span class="span_02">( <%= number_to_percentage(@promocode.p_spare_27, precision: 0) %> OFF )</span></p>
            
-          <!--  <p class="h_price"><%= number_to_currency(@promocode.p_price) %> <span class="span_01"><%= number_to_currency(@promocode.p_list_price) %></span><span class="span_02">( <%= @promocode.p_percentage %>% OFF )</span></p> -->
-
            <div class="extra_info">
-             <em>PROMO CODE: <%= @promocode.p_promocode %></em>
+            <% if @promocode.p_spare_03.present? %>
+             <span class="basic_info">
+              <% if @promocode.p_spare_01.present? %>
+                <%= @promocode.p_spare_01 %> |
+              <% end %>
+                Avg <%= @promocode.p_spare_03 %> / <%= number_with_delimiter(@promocode.p_spare_04) %>+ reviews 
+              <% if @promocode.p_spare_02.present? %>
+                | <%= @promocode.p_spare_02 %> 
+              <% end %>
+             </span> 
+            <% end %>
              <!-- <em><%= @promocode.created_at.strftime("%d. %B. %H:%M ") %></em> -->
-             <em>+ FREE Shipping ( Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items. )</a></em>
-             <% if @promocode.p_extra_deal.present? %><em>+ <%= @promocode.p_extra_deal %>% Off Extra Deal</em><% end %>
-             <% if @promocode.p_coupon_deal.present? %><em>+ <%= @promocode.p_coupon_deal %> Off Coupon</em><% end %>
+            <em>+ FREE Shipping ( Free Shipping: <a class="prime" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items. )</a></em>
+            <% if @promocode.p_extra_deal.present? %><em>+ <%= @promocode.p_extra_deal %>% Off Extra Deal</em><% end %>
+            <% if @promocode.p_coupon_deal.present? %><em>+ <%= @promocode.p_coupon_deal %> Off Coupon</em><% end %>
             </div>
 
-           <p class="description"><%= @promocode.p_description %></p>
-           
+            <% if @promocode.p_description.present? %>
+              <p class="description"><%= @promocode.p_description %></p>
+            <% end %>
+
+            <p class="code_line">Copy the code below and apply it top your checkout</p>
+            <p class="code_line">End Date: <%= @promocode.p_end_date %></p>
+            <div class="code_main">
+              <div>
+                <span class="copy"><code><%= @promocode.p_promocode %></code></span>
+                <button><span class="icon-copy"></span>COPY</button>
+              </div>
+            </div>
+            <div class="confirmation"><span class="icon-checkmark"></span></div>
+
            <div class="btn">
-            <a class="m_btn" target="_blank" href="<%= @promocode.p_link %>">Check it out on &ensp;<em>Amazon</em></a>
-           </div>
+            <a class="m_btn p_btn" target="_blank" href="<%= @promocode.p_link %>">Check it out on &ensp;<em>Amazon</em></a>
+           </div> 
+
           </div>
         </div>
 
@@ -59,7 +80,8 @@
           </div>
         <% end %>  
 
-      </div>
+      </div><!--./show_box-->
+      
       <div class="hotdeal_related">
         <p>Related Products on Amazon</p>
         <script type="text/javascript">
@@ -78,8 +100,7 @@
         <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
       </div>
 
-    </div>
-    
-  </div>
-</div>
+    </div><!--./wrap-->
+  </div><!--./show_wrap-->
+</div><!--./layout-->
 <script><%= render(:partial => 'promocode', :handlers => [:erb], :formats => [:js]) %></script>
