--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -55,6 +55,191 @@
 </div>
  -->
 
+<div class="middle_box"><a href="/guides/halloween"><img src="<%=asset_path 'halloween.png' %>" alt="Save $10 when you spend $100" /></a></div>
+<div class="middle_box_m"><a href="/guides/halloween"><img src="<%=asset_path 'halloween_m.png' %>" alt="Save $10 when you spend $100" /></a></div>
+
+<div class="card clearfix" data-score="50" data-price="12.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2qegv29"><img src="https://m.media-amazon.com/images/I/618fKSvTUyL._SR400,400_.jpg" alt="papasgix Men's Jogger Pants" title="papasgix Men's Jogger Pants"/></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2qegv29">papasgix Men's Jogger Pants Slim Fit Workout Running Pants with Zipper Pockets Sweatpants</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.49</span><span class="ori_price">$24.99</span></address>
+      <textarea readonly="readonly" class="code_area">506ZHRFI</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $24.99</strong> with promo code: <strong class="m_codes">506ZHRFI</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 16, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2qegv29">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="20" data-price="23.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2OSWIQq"><img src="https://m.media-amazon.com/images/I/61-zzKdQnJL._SR400,400_.jpg" alt="Work Laptop Backpack" title="Work Laptop Backpack"/></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2OSWIQq">Work Laptop Backpack, ARUNGOR Black Travel Backpack for Men & Women with Laptop Compartment and Removable Organizer Insert, Water Resistant College School Computer Backpacks Bag Fits 15.6 Inch Laptop</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$23.99</span><span class="ori_price">$29.99</span></address>
+      <textarea readonly="readonly" class="code_area">20WI1C3T</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>20% off at $29.99</strong> with promo code: <strong class="m_codes">20WI1C3T</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 23, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2OSWIQq">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Bhik0A"><img src="https://m.media-amazon.com/images/I/61MFEPnEqUL._SR400,400_.jpg" alt="Amurgo Insulated Wine Tumbler" title="Amurgo Insulated Wine Tumbler"/></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Bhik0A">Amurgo Insulated Wine Tumbler with Lid (1 Pack, Teal) - 12 oz Wine Tumbler with Straw & Brush - Double Wall Vacuum Insulated Travel Tumbler Cup for Coffee, Wine, Cocktails, Ice Cream</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.99</span><span class="ori_price">$23.99</span>
+        <div class="tooltip_common tooltip_green"><span> + 5% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 5% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">509OAF3F</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $23.99</strong> with promo code: <strong class="m_codes">509OAF3F</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 18, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Bhik0A">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="40" data-price="8.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2OPN5lm"><img src="https://m.media-amazon.com/images/I/61vB2JNKkQL._SR400,400_.jpg" alt="Yoseng Makeup Brushes Set" title="Yoseng Makeup Brushes Set"/></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2OPN5lm">Yoseng Makeup Brushes Set 10Pcs Professional Oval Toothbrush Foundation Contour Powder Blush Conceler Eyeliner Blending Brush New Fashionable Super Soft Cosmetic Brushes Tool Set with Box(Rose Gold)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.39</span><span class="ori_price">$13.99</span></address>
+      <textarea readonly="readonly" class="code_area">40YO532M</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $13.99</strong> with promo code: <strong class="m_codes">40YO532M</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 17, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2OPN5lm">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="7.5">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2oL4iSk"><img src="https://m.media-amazon.com/images/I/71BqIi-vkVL._SR400,400_.jpg" alt="Bronson Methyl B12 5000 mcg" title="Bronson Methyl B12 5000 mcg"/></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2oL4iSk">Bronson Methyl B12 5000 mcg Superior B-12 Methylcobalamin Non-GMO Gluten Free Soy Free Fast Dissolve Cherry Tablets, 60 Count</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.5</span><span class="ori_price">$14.99</span>
+        <div class="tooltip_common tooltip_green"><span> + 10% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 10% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">50AK4OSW</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $14.99</strong> with promo code: <strong class="m_codes">50AK4OSW</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 20, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2oL4iSk">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="40" data-price="9.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2qiOmaq"><img src="https://m.media-amazon.com/images/I/81sWBZVlDVL._SR400,400_.jpg" alt="Bedroom Slippers " title="Bedroom Slippers "/></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2qiOmaq">JOINFREE Women's Bedroom Slippers Comfort Four Season Classy Indoor Spa Slide Shoes</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.59</span><span class="ori_price">$15.99</span></address>
+      <textarea readonly="readonly" class="code_area">401PFVBC</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $15.99</strong> with promo code: <strong class="m_codes">401PFVBC</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2qiOmaq">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="75" data-price="11.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IRB2jC"><img src="https://m.media-amazon.com/images/I/41EBiogdAtL._SR400,400_.jpg" alt="BISON DENIM Mens Messenger Bag" title="BISON DENIM Mens Messenger Bag"/></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>75% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IRB2jC">BISON DENIM Mens Messenger Bag Casual Crossbody Shoulder Purse Laptop Bag for 13.3 In Laptop</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.50</span><span class="ori_price">$45.99</span></address>
+      <textarea readonly="readonly" class="code_area">75GIETHW</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>75% off at $45.99</strong> with promo code: <strong class="m_codes">75GIETHW</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 19, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2IRB2jC">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="70" data-price="15.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/32lijEX"><img src="https://m.media-amazon.com/images/I/61+TIbVQXSL._SR400,400_.jpg" alt="Action Camera" title="Action Camera"/></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/32lijEX">Action Camera 4K 16MP Underwater Waterproof Camera 170° Wide Angle WiFi Sports Cam with 2 Batteries and Mounting Accessories Kit …</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.00</span><span class="ori_price">$49.99</span></address>
+      <textarea readonly="readonly" class="code_area">709WG2P3</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $49.99</strong> with promo code: <strong class="m_codes">709WG2P3</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 16, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/32lijEX">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="8.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IVU4p5"><img src="https://m.media-amazon.com/images/I/71KvXH5RZJL._SR400,400_.jpg" alt="Presentiq Travel Storage Compression Bags" title="Presentiq Travel Storage Compression Bags"/></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IVU4p5">Presentiq Travel Storage Compression Bags for Clothes, Space Saver Packing Sacks, no Vacuum or Pump, Luggage Accessories, 8-Pack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.99</span><span class="ori_price">$17.98</span>
+        <div class="tooltip_common tooltip_red"><span> + Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span> + Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">507HPMP3</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $17.98</strong> with promo code: <strong class="m_codes">507HPMP3</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2IVU4p5">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="41" data-price="5.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/33BDrHi"><img src="https://m.media-amazon.com/images/I/518DKkKJqTL._SR400,400_.jpg" alt="Toilet Paper Holder" title="Toilet Paper Holder"/></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>41% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/33BDrHi">Cerekony Adhesive Toilet Paper Holder - Toilet Roll Holder for Command Bathroom Accessories Hooks Stick on Wall Stainless Steel Brushed Nickel</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.89</span><span class="ori_price">$9.99</span>
+        <div class="tooltip_common tooltip_green"><span> + 6% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 6% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">41JY9L9J</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>41% off at $9.99</strong> with promo code: <strong class="m_codes">41JY9L9J</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 26, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/33BDrHi">Use Code at Amazon</a></div>
+</div>
+ 
 <div class="card clearfix" data-score="45" data-price="9.34">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/32iLo3D"><img src="https://m.media-amazon.com/images/I/81C5+ftH62L._SR400,400_.jpg" alt="Aqui Legend Hot Yoga Towel" title="Aqui Legend Hot Yoga Towel"/></a>
@@ -179,6 +364,9 @@
   </div> 
   <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31i3nWE">Use Code at Amazon</a></div>
 </div>
+
+<div class="middle_box"><a target="_blank" href="https://amzn.to/2oziOwd"><img src="<%=asset_path 'bargain.png' %>" alt="Save $10 when you spend $100" /></a></div>
+<div class="middle_box_m"><a target="_blank" href="https://amzn.to/2oziOwd"><img src="<%=asset_path 'bargain_m.png' %>" alt="Save $10 when you spend $100" /></a></div>
  
 <div class="card clearfix" data-score="30" data-price="9.09">
   <div class="image_box">
