--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -559,7 +559,6 @@
 /*.most_box .overlay-container:hover .overlay-img{-moz-transform:scale(1.2);-ms-transform:scale(1.2);-o-transform:scale(1.2);-webkit-transform:scale(1.2);transform:scale(1.2);-webkit-filter:grayscale(0%);filter:none;}*/
 /*.most_box .overlay-container:hover p{display:none;}*/
 @media screen and (max-width:640px){
-  .most_review_sub{margin-top:85px;}
   .guide_wrap .most_main p{font-size:14px;}
   .most_box a p{font-size:18px;}
   .most_box{float:left;width:48%;}
@@ -567,7 +566,7 @@
 }
 @media screen and (min-width:641px) and (max-width:1199px){
   .most_box a p, .most_body_header a p{font-size:15px;}
-  .most_review_sub{margin-top:165px;}
+  .most_review_sub{margin-top:0;}
   .most_review_wrap{margin-top:10px;}
   .most_box{float:left;width:19%;margin:0.5%;}
 }
