--- a/app/views/promocodes/edit.html.erb
+++ b/app/views/promocodes/edit.html.erb
@@ -9,7 +9,7 @@
 
         <%= f.input :pimage, label: 'Choose Image' %>
         <%= f.select :p_banner, ([["Do You Have A Banner?", ""], "YES"])%><br /><br />
-        <%= f.select :p_spare_01, ([["NO PRIME", ""], "PRIME"])%>
+        <%= f.select :p_spare_01, ([["NO prime?", ""], "Yes"])%>
         <%= f.select :p_spare_02, ([["In Stock", ""], "Only in a few stock left"])%><br /><br />
         <%= f.input :p_image, label: 'Image URL' %>
         <%= f.input :p_link, label: 'Product URL' %>
