--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -2,14 +2,14 @@
 
 <div class="layout"><!--layout-->
   <div class="wrap">  
-  <%= render 'shared/header' %>
+  <%= render 'shared/header_short' %>
 
-  <!-- <div class="deals_main_menu">
+  <div class="deals_main_menu clearfix">
     <ul>
-      <li class="nth_1"><a href="">Amazon <span>|</span> </a></li>
-      <li class="nth_2"><a href="">Discover more deals</a></li>
-    </ul>
-  </div> -->
+      <li class="nth_1"><a href="">Amazon's Bargain <!-- <span>|</span> --> </a></li>
+      <!-- <li class="nth_2"><a href="">Discover more deals</a></li> -->
+    </ul>    
+  </div>
 
   <%= render 'deals/header' %>    
   <div class="codes common_layout">
