--- a/app/views/deals/most_reviewed.html.erb
+++ b/app/views/deals/most_reviewed.html.erb
@@ -1,6 +1,13 @@
 <div class="layout"><!--layout-->
  <div class="wrap">   
-  <%= render 'shared/header' %>
+  <%= render 'shared/header_short' %>
+
+  <div class="deals_main_menu clearfix">
+    <ul>
+      <li class="nth_1"><a href="">Amazon's Bargain <!-- <span>|</span> --> </a></li>
+      <!-- <li class="nth_2"><a href="">Discover more deals</a></li> -->
+    </ul>    
+  </div>
   <%= render 'deals/header' %>
   
   <div class="promotions editors_pick common_layout most_wrapper clearfix">
@@ -8,8 +15,8 @@
     <div class="nav_most_m"><%= render 'deals/navbar_most_index_m' %></div>
     <div class="filter-group guide_wrap ">
       <div class="mt_info">
-        <h2>Most-Reviewed Products On Amazon</h2> 
-        <p>When it comes to deciding whether or not to buy a product, reviews and user feedback are one of the most helpful. So we’ve done the work for you. We put together a list of the most-reviewed products. Let us be your Amazon guide and walk you through the highest-reviewed products on Amazon.</p>
+        <!-- <h2>Most-Reviewed Products On Amazon</h2>  -->
+        <!-- <p>When it comes to deciding whether or not to buy a product, reviews and user feedback are one of the most helpful. So we’ve done the work for you. We put together a list of the most-reviewed products. Let us be your Amazon guide and walk you through the highest-reviewed products on Amazon.</p> -->
       </div>
       
       <%= render 'deals/body_most_reviewed' %>
