--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -3,7 +3,13 @@
 <div class="layout">
   <div class="wrap">
 
-    <%= render 'shared/header' %>
+    <%= render 'shared/header_short' %>
+    <div class="deals_main_menu clearfix">
+      <ul>
+        <li class="nth_1"><a href="">Amazon's Bargain <!-- <span>|</span> --> </a></li>
+        <!-- <li class="nth_2"><a href="">Discover more deals</a></li> -->
+      </ul>    
+    </div>
     <%= render 'deals/header' %>    
 
     <div class="codes common_layout">
