--- a/app/views/deals/promotions.html.erb
+++ b/app/views/deals/promotions.html.erb
@@ -1,7 +1,13 @@
 <% content_for :title, "Coupons, Sales & Offer, Promotions, Brand Deals on Amazon" %>
 <div class="layout"><!--layout-->
  <div class="wrap">   
-  <%= render 'shared/header' %>
+  <%= render 'shared/header_short' %>
+  <div class="deals_main_menu clearfix">
+    <ul>
+      <li class="nth_1"><a href="">Amazon's Bargain <!-- <span>|</span> --> </a></li>
+      <!-- <li class="nth_2"><a href="">Discover more deals</a></li> -->
+    </ul>    
+  </div>
   <%= render 'deals/header' %>   
   
   <div class="promotions common_layout clearfix">
