--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -5,7 +5,7 @@
 
     <%= f.input :himage, label: 'Choose Image' %>
     <%= f.select :h_spare_03, options_for_select([["Do You Have A Banner?", ""], "YES"])%>
-    <%= f.select :h_spare_06, options_for_select([["NO PRIME", ""], "PRIME"])%>
+    <%= f.select :h_spare_06, options_for_select([["NO prime?", ""], "Yes"])%>
     <%= f.select :h_spare_07, options_for_select([["In Stock", ""], "Only in a few stock left"])%><br /><br />
     <%= f.input :h_image, label: 'Image URL' %>
     <%= f.input :h_link, label: 'Product URL' %>
@@ -22,7 +22,7 @@
       <%= f.input :h_spare_01, label: 'Extra Deals?' %>
     </div>
     <%= f.input :h_description, label: 'Description Of Product' %>
-    <%= f.input :h_keyword, label: 'Keyword (  gadgets, amazon, under, recommended  )' %>
+    <%= f.input :h_keyword, label: 'Keyword (  gadgets, amazon, recommended, under  )' %>
 
     <%= f.button :submit %>
 
