--- a/app/views/hotdeals/edit.html.erb
+++ b/app/views/hotdeals/edit.html.erb
@@ -9,7 +9,7 @@
 
         <%= f.input :himage, label: 'Choose Image' %>
         <%= f.select :h_spare_03, ([["Do You Have A Banner?", ""], "YES"])%>
-        <%= f.select :h_spare_06, ([["No PRIME", ""], "PRIME"])%>
+        <%= f.select :h_spare_06, ([["No PRIME?", ""], "Yes"])%>
         <%= f.select :h_spare_07, ([["In Stock", ""], "Only in a few stock left"])%><br /><br />
         <%= f.input :h_image, label: 'Image URL' %>
         <%= f.input :h_link, label: 'Product URL' %>
