--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -39,7 +39,9 @@
             <% if @promocode.p_spare_03.present? %>
              <span class="basic_info">
               <% if @promocode.p_spare_01.present? %>
-                <%= @promocode.p_spare_01 %> |
+                <div class="primeornot"><%= @promocode.p_spare_01 %> |</div>
+              <% else %>
+                PRIME |
               <% end %>
                 Avg <%= @promocode.p_spare_03 %> / <%= number_with_delimiter(@promocode.p_spare_04) %>+ reviews 
               <% if @promocode.p_spare_02.present? %>
