--- a/app/views/hotdeals/edit.html.erb
+++ b/app/views/hotdeals/edit.html.erb
@@ -26,7 +26,7 @@
           <%= f.input :h_spare_01, label: 'Extra Deals?' %>
         </div>
         <%= f.input :h_description, label: 'Description Of Product' %>
-        <%= f.input :h_keyword, label: 'Keyword (  gadgets, amazon, under, recommended  )' %>
+        <%= f.input :h_keyword, label: ' gadgets, amazon, recommended, under ' %>
 
         <%= f.button :submit %>
 
