--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -329,7 +329,7 @@ $(document).ready(function() {
      $temp.remove();
     
     
-    $('.confirmation').hide().html('CONFIRMED <b>' + btntxt + ' YOUR PROMO CODE').fadeIn(100).delay(800).fadeOut(300);
+    $('.confirmation').hide().html('CONFIRMED <b>' + btntxt + ' YOUR PROMO CODE <b>').fadeIn(100).delay(800).fadeOut(300);
 
     $( '.main' ).trigger( "click" );
   });
