--- a/app/views/promocodes/edit.html.erb
+++ b/app/views/promocodes/edit.html.erb
@@ -28,7 +28,7 @@
           <%= f.input :p_extra_deal, label: 'Extra Deals?' %>
         </div>
         <%= f.input :p_description, label: 'Description Of Product' %>
-        <%= f.input :p_keyword, label: 'Keyword (  gadgets, amazon, under, recommended, promo code  )' %>
+        <%= f.input :p_keyword, label: ' gadgets, amazon, recommended, promo code, coupon, under ' %>
 
         <%= f.button :submit %>
 
