--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -106,31 +106,39 @@
 
   .codes .card_wrap .card .inner>em{display:block;margin-right:5px;}
   .codes .card_wrap .card .inner>em>span{font-size:15px;color:#ccc;text-decoration:line-through;margin-left:5px;}
+
+
+  .codes .card_wrap .card .inner>.code_high{border:1px solid #ccc;padding:15px;}
+  .codes .card_wrap .card .inner>.code_high .extra_info{display:none;}
+
   .codes .card_wrap .card .inner>.code_high>address{display:block;}
   .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;font-weight:700;}
   .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#87c442;}
   .codes .card_wrap .card .inner>.code_high>address>.amz_prime{color:#e47911;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
+
   .codes .card_wrap .card .inner>.code_high>.admin{}
   .codes .card_wrap .card .inner>.code_high>.admin>ul{}
   .codes .card_wrap .card .inner>.code_high>.admin>ul>li{float:left;margin-right:15px;}
 
   .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:none;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_common{margin-left:5px;position:relative;display:inline;color:#fff;padding:0 10px;border-radius:10px;}
+  .codes .card_wrap .card .inner>.code_high .tooltip_common{margin-left:5px;position:relative;display:inline;color:#616161;padding:0 5px;/*border-radius:10px;*/}
   .codes .card_wrap .card .inner>.code_high .tooltip_common:hover .tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high .content_common{visibility:hidden;width:400px;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_red{background:#ff4d4d;}
+  /*.codes .card_wrap .card .inner>.code_high .tooltip_red{background:#ff4d4d;}*/
   .codes .card_wrap .card .inner>.code_high .tooltip_red .tooltip-content{background:#ff4d4d;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_green{background:#87c442;}
+  /*.codes .card_wrap .card .inner>.code_high .tooltip_green{background:#87c442;}*/
   .codes .card_wrap .card .inner>.code_high .tooltip_green .tooltip-content{background:#87c442;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_orange{background:#e47911;}
+  /*.codes .card_wrap .card .inner>.code_high .tooltip_orange{background:#e47911;}*/
   .codes .card_wrap .card .inner>.code_high .tooltip_orange .tooltip-content{background:#e47911;}
-  .codes .card_wrap .card .inner>.code_high .tooltip_purple{background:#b400b4;}
+  /*.codes .card_wrap .card .inner>.code_high .tooltip_purple{background:#b400b4;}*/
   .codes .card_wrap .card .inner>.code_high .tooltip_purple .tooltip-content{background:#b400b4;}
 
   .codes .card_wrap .card .inner>.code_high>em{font-size:12px;color:#616161;display:block;}
 
   .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;/*border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;*/}
+  .codes .card_wrap .card .inner>.code_high .discounted{color:#08f;font-size:25px;margin-right:5px;font-weight:700;display:inline-block;}
+  .codes .card_wrap .card .inner>.code_high .ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
   .codes .card_wrap .card .inner>.code_high>.mobile_code{display:none;}
   .codes .card_wrap .card .inner>.code_high>p>span{position:relative;top:0.4em;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;font-weight:500;}
@@ -150,6 +158,7 @@
   .codes .card_wrap .card .deal_btn em.stock_m{display:none;}
   .codes .card_wrap .card .deal_btn p{color:#ff3333;}
 }
+
 
 @media screen and (max-width:640px){
   .codes .note_pc{display:none;}
@@ -225,6 +234,8 @@
   .codes .card_wrap .card .inner>p>a>span{color:#fff;background:#08f;padding:0 5px;border-radius:5px;}
   .codes .card_wrap .card .inner>em{display:block;margin-right:5px;font-size:13px;font-weight:400;}
   .codes .card_wrap .card .inner>em>span{font-size:12px;color:#ccc;text-decoration:line-through;margin-left:5px;}
+
+  .codes .card_wrap .card .inner>.code_high .extra_info{display:none;}
   .codes .card_wrap .card .inner>.code_high>address{display:block;}
   .codes .card_wrap .card .inner>.code_high>address>.dis_price{color:#08f;font-size:25px;margin-right:5px;font-weight:700;}
   .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#87c442;}
@@ -248,6 +259,8 @@
 
   .codes .card_wrap .card .inner>.code_high>em{font-size:11px;color:#616161;display:block;margin-top:3px;}
   .codes .card_wrap .card .inner>.code_high>p{display:inline;/*border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;*/}
+  .codes .card_wrap .card .inner>.code_high .discounted{color:#08f;font-size:25px;margin-right:5px;font-weight:700;display:inline-block;}
+  .codes .card_wrap .card .inner>.code_high .ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
   .codes .card_wrap .card .inner>.code_high>.mobile_code{display:block;}
   .codes .card_wrap .card .inner>.code_high>p>span{font-weight:400;position:relative;top:0.4em;font-size:10px;}
   .codes .card_wrap .card .inner>.code_high>p>span>strong{font-size:17px;color:#000;font-weight:500;font-size:12px;}
