--- a/app/assets/stylesheets/most_reviews.css
+++ b/app/assets/stylesheets/most_reviews.css
@@ -70,7 +70,10 @@ blockquote {
 /*.most_review_sub{margin-top:100px;}*/
 .deals_main_menu ul .most_tit a{font-size:68px;}
 .most_article .intro{background:#000;color:#fff;padding:15px;margin-bottom:10px;text-align:center;}
-.most_article .boxes{border:2px solid #000;padding:20px;margin-bottom:10px;}
-.most_article .boxes ul{}
-.most_article .boxes ul li{padding:5px;}
-.most_article .boxes ul li a{text-decoration:none;color:#000;}
+.most_article .boxes{padding:20px 20px 20px 0;margin-bottom:10px;}
+.most_article .boxes h2{font-size:30px;margin-bottom:10px;letter-spacing:1.2px;color:#000;}
+.most_article .boxes a{text-decoration:none;color:#000;font-size:17px;letter-spacing:1.2px;display:block;margin-bottom:7px;padding-left:10px;}
+
+
+
+
