--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -19,7 +19,7 @@
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>Promotion Codes | Hand-Pick On Amazon Oct. 16. 2019.<% if can? :update, @promocodes %><div class="hotdeals_new"><%= link_to 'New Code', new_promocode_path %></div><% end %></h2>
+        <h2>Promotion Codes | Hand-Pick On Amazon Oct. 17. 2019.<% if can? :update, @promocodes %><div class="hotdeals_new"><%= link_to 'New Code', new_promocode_path %></div><% end %></h2>
         <%= render 'promocodes_days/note_wadiz' %>
         <%= render 'shared/amz_search' %>
         <div class="sort_box clearfix">
@@ -44,7 +44,7 @@
         </div>
         <!-- End -->
 
-        <p class="updating">Promotional codes are still updating... :D <a href="/promocodes_days/day_04">GO TO PROMO CODES OF YESTERDAY</a></h2>
+        <p class="updating"><a href="/promocodes_days/day_05">GO TO PROMO CODES OF YESTERDAY</a></h2>
         
       </div><!--./rt_cnt-->  
 
