--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -22,7 +22,7 @@
       <%= f.input :h_spare_01, label: 'Extra Deals?' %>
     </div>
     <%= f.input :h_description, label: 'Description Of Product' %>
-    <%= f.input :h_keyword, label: 'Keyword (  gadgets, amazon, recommended, under  )' %>
+    <%= f.input :h_keyword, label: ' gadgets, amazon, recommended, under ' %>
 
     <%= f.button :submit %>
 
