hit of hotdeals

--- a/app/views/deals/_body_most_reviewed_test.html.erb
+++ b/app/views/deals/_body_most_reviewed_test.html.erb
@@ -1,6 +1,4 @@
-<!-- <div class="filter-node" data-filter='["Categories","Title"]'>
-<a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title">Title</a> 
-</div> -->
+<!-- <div class="filter-node" data-filter='["","Title"]'><a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title">Title</a></div> -->
 <div class="most_article">
   
 
@@ -59,8 +57,7 @@
 
       <div class="boxes box_home">
        <h2 class="filter-node" data-filter='["","!@none"]'>Home & Living</h2>
-       <div class="filter-node" data-filter='["","Coffee Makers"]'><a target="_blank" href="https://amzn.to/2ZaJMf3" class="overlay-container" data-overlay-text="Coffee Makers">Coffee Makers</a></div>
-
+       
        <div class="filter-node" data-filter='["","Stick Vacuums"]'><a target="_blank" href="https://amzn.to/2NoPNh2" class="overlay-container" data-overlay-text="Stick Vacuums">Stick Vacuums</a></div>
 
        <div class="filter-node" data-filter='["","Robotic Vacuums"]'><a target="_blank" href="https://amzn.to/2ZltYFk" class="overlay-container" data-overlay-text="Robotic Vacuums">Robotic Vacuums</a></div>
@@ -75,6 +72,9 @@
 
       <div class="boxes box_kitchen">
        <h2 class="filter-node" data-filter='["","!@none"]'>Kitchen & Dining</h2>
+
+        <div class="filter-node" data-filter='["","Coffee Makers"]'><a target="_blank" href="https://amzn.to/2ZaJMf3" class="overlay-container" data-overlay-text="Coffee Makers">Coffee Makers</a></div>
+
         <div class="filter-node" data-filter='["","Cookware Set"]'><a target="_blank" href="https://amzn.to/2ZApPK0" class="overlay-container" data-overlay-text="Cookware Set">Cookware Set</a></div>
 
         <div class="filter-node" data-filter='["","Ranges, Ovens & Cooktops"]'><a target="_blank" href="https://amzn.to/30XJF2p" class="overlay-container" data-overlay-text="Ranges, Ovens & Cooktops">Ranges, Ovens & Cooktops</a></div>
@@ -96,6 +96,18 @@
         <div class="filter-node" data-filter='["","Electric Cake Pop & Mini Cake Makers"]'><a target="_blank" href="https://amzn.to/35kGm8X" class="overlay-container" data-overlay-text="Electric Cake Pop & Mini Cake Makers">Cake Pop & Mini Cake Makers</a></div>
 
         <div class="filter-node" data-filter='["","Electric Pressure Cookers"]'><a target="_blank" href="https://amzn.to/2Mviyq2" class="overlay-container" data-overlay-text="Electric Pressure Cookers">Electric Pressure Cookers</a></div>
+
+        <div class="filter-node" data-filter='["","Bakeware"]'><a target="_blank" href="https://amzn.to/35HwV3v" class="overlay-container" data-overlay-text="Bakeware">Bakeware</a></div>
+
+        <div class="filter-node" data-filter='["","Coffee, Tea & Espresso"]'><a target="_blank" href="https://amzn.to/2Bk2uTa" class="overlay-container" data-overlay-text="Coffee, Tea & Espresso">Coffee, Tea & Espresso</a></div>
+
+        <div class="filter-node" data-filter='["","Dining & Entertaining"]'><a target="_blank" href="https://amzn.to/2MmLxxt" class="overlay-container" data-overlay-text="Dining & Entertaining">Dining & Entertaining</a></div>
+
+        <div class="filter-node" data-filter='["","Cutlery & Knife Accessories"]'><a target="_blank" href="https://amzn.to/2oOkqT6" class="overlay-container" data-overlay-text="Cutlery & Knife Accessories">Cutlery & Knife Accessories</a></div>
+
+        <div class="filter-node" data-filter='["","Kitchen & Table Linens"]'><a target="_blank" href="https://amzn.to/33FJRoJ" class="overlay-container" data-overlay-text="Kitchen & Table Linens">Kitchen & Table Linens</a></div>
+
+        <div class="filter-node" data-filter='["","Kitchen Utensils & Gadgets"]'><a target="_blank" href="https://amzn.to/2BlEKxG" class="overlay-container" data-overlay-text="Kitchen Utensils & Gadgets">Kitchen Utensils & Gadgets</a></div>
 
       </div><!--./box_kitchen-->
 
